FrondEnd : FIX overflow-x hidden

--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -7,6 +7,7 @@ $font-color: #424242;
 body {
   font-family: Arial, sans-serif;
   background-color: $light-gray;
+  overflow-x: hidden;
 }
 
 section.user-post-container-fake {
